Added Authentication To server

--- a/bookserver/docker-compose.yaml
+++ b/bookserver/docker-compose.yaml
@@ -33,7 +33,9 @@ services:
     ports:
       - "5050:80"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+        
 
   proxy:
     image: nginx
