Refactor nginx.conf to proxy requests to /api endpoint

--- a/bookserver/proxy/nginx.conf
+++ b/bookserver/proxy/nginx.conf
@@ -17,7 +17,8 @@ http {
 
 
         listen 80;
-        location / {
+        location /api {
+            rewrite ^/api/(.*) /$1/ break;
             proxy_pass http://bookserver:8000;
         }
 
